--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Alfresco-maven-sdk-guide</h1>
+      <h1 class="project-name">Alfresco-maven-sdk-guide - Coming Soon</h1>
       <h2 class="project-tagline">A comprehensive guide to Alfresco developing with Maven SDK</h2>
       <a href="https://github.com/teqnology/alfresco-maven-sdk-guide" class="btn">View on GitHub</a>
       <a href="https://github.com/teqnology/alfresco-maven-sdk-guide/zipball/master" class="btn">Download .zip</a>
